--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
-<h1>Hello Edie</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Practice</title>
+</head>
+<body>
+       <header>
+           <div class="logo">
+               <h1>Edie</h1>
+           </div>
+           <nav>
+               <ul class="nav-links">
+                    <li class="nav-link">
+                       <a href="#">home</a>
+                    </li>
+                    <li class="nav-link">
+                       <a href="#">services</a>
+                    </li>
+                    <li class="nav-link">
+                       <a href="#">our works</a>
+                    </li>
+                    <li class="nav-link">
+                       <a href="#">clients</a>
+                    </li>
+                    <li class="nav-link">
+                       <a href="#">contact</a>
+                    </li>
+               </ul>
+           </nav>
+       </header>
+
+       <section class="services">
+           <div class="head">
+               <span>Unhappy with your website?</span>
+               <h2>We create beautiful and fast web services</h2>
+           </div>
+           <img src="images/heroImage.jpg" alt="our team">
+           <div class="subscraption">
+                <h2>Story, emotion and purpose</h2>
+                <p>We help transform your ideas into real world applications that will outperform your toughest competition and help you achieve your strategic goals in short period of time.</p>
+                <div class="input-box">
+                    <input type="email" placeholder="Email">
+                    <button class="btn btn-default">Join</button>
+                </div>
+            </div>
+       </section>
+
+       <div class="our-works">
+            <h2>We offer high demand services  </h2>
+            <div class="card-wrapper">
+                <div class="card">
+                    <div class="icon">
+                        <i class="fas fa-pen"></i>
+                    </div>
+                    <h3>UI/UX Design</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis turpis.</p>
+                    <button class="btn">Get started</button>
+                </div>
+                <div class="card">
+                    <div class="icon">
+                        <i class="fas fa-terminal"></i>
+                    </div>
+                    <h3>Front End</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis turpis.</p>
+                    <button class="btn">Get started</button>
+                </div>
+                <div class="card">
+                    <div class="icon">
+                        <i class="fas fa-server"></i>
+                    </div>
+                    <h3>Back End</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat aliquet id quis turpis.</p>
+                    <button class="btn">Get started</button>
+                </div>
+            </div>
+       </div>
+</body>
+</html>
