Desktop version done

--- a/index.html
+++ b/index.html
@@ -106,5 +106,49 @@
                 </div>
             </div>
         </section>
+
+        <section class="team">
+            <div class="content">
+                <div class="text">
+                    <span>Meet the team</span>
+                    <h2>We are chilled and a laidback team</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="images">
+                    <img src="images/person1.png">
+                    <img src="images/person2.png">
+                    <img src="images/person3.png">
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="footer-content">
+                <ul class="footer-menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Our works</a></li>
+                    <li><a href="#">Clients</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <div class="footer-logo">
+                    <div class="logo">
+                        <h1>Edie</h1>
+                    </div>
+                    <ul class="social-networks">
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+                    </ul>
+                </div>
+                <div class="subscraption">
+                    <span>Want us to contact you?</span>
+                    <div class="input-box">
+                        <input type="email" placeholder="Email">
+                        <button class="btn btn-default">Join</button>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
